--- a/style.css
+++ b/style.css
@@ -41,12 +41,13 @@ span{
     height: 100%;
     background-color: hsl(277, 88%, 35%);
     margin-left: 533px;
-    opacity: 0.5;
+    opacity: 0.75;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     position: relative;
-    bottom: 365px;
+    bottom: 363.5px;
     z-index: 1;
+    mix-blend-mode: multiply;
 }
 
 .paragraph{
@@ -58,7 +59,6 @@ span{
     left: 65px;
     width: 370px;
     line-height: 1.5rem;
-    
 }
 
 
@@ -91,7 +91,6 @@ span{
     .purple{
         width: 430px;
         height: 447px;
-        opacity: 0.5;
         position: relative;
         right: 533px;
         border-bottom-right-radius: 0px;
